Refactor typography system in CSS; replace GT-Pressura and Cambon with IvyOra Display and GTPlanar fonts. Update font utilities and styles across components. Enhance image handling with new responsive image functions and optimize build process with image conversion script.

--- a/package.json
+++ b/package.json
@@ -5,20 +5,23 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && node scripts/optimize-images.js",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "latest",
+    "framer-motion": "^12.23.26",
+    "gsap": "^3.14.2",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "framer-motion": "^12.23.26",
-    "lucide-react": "^0.562.0",
     "react-router-dom": "^7.11.0",
-    "@google/genai": "latest"
+    "split-type": "^0.3.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "sharp": "^0.34.5",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
