--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,11 @@
 # Your WordPress site must allow this frontend's origin in CORS and expose the GraphQL endpoint.
 VITE_WP_GRAPHQL_URL=https://your-wordpress-site.com/graphql
 
+# Optional: Media CDN base URL. When set, WordPress media URLs are rewritten to this origin (e.g. public S3 or CloudFront).
+# When unset, media URLs are used as returned by WordPress so images load from your WordPress site (same as on the live post).
+# Example: VITE_MEDIA_CDN_URL=https://leckerbisschen.s3.eu-central-1.amazonaws.com
+# VITE_MEDIA_CDN_URL=
+
 # Substack newsletter publication URL (optional)
 # VITE_SUBSTACK_PUBLICATION=https://yoursubstack.substack.com
 
