Enhancement: update .env.example with safety notes for VITE_* variables; remove unnecessary preloads in index.html; add geolocation proxy in vite.config.ts; implement caching for geolocation in WeatherStatusBackground; refactor media URL handling in WordPress integration; update README for weather integration details and CORS handling; improve image handling in GalleryGrid and Story components.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
+# All VITE_* variables are embedded in the client bundle and are visible in the browser.
+# Only use values that are safe to share publicly (e.g. public URLs, form IDs). No secrets.
+
 # WordPress GraphQL endpoint (required for Stories and headless content).
-# Your WordPress site must allow this frontend's origin in CORS and expose the GraphQL endpoint.
+# Safe to expose: it is a public API URL. Your WordPress site must allow this frontend's origin in CORS.
 VITE_WP_GRAPHQL_URL=https://your-wordpress-site.com/graphql
 
 # Optional: Media CDN base URL. When set, WordPress media URLs are rewritten to this origin (e.g. public S3 or CloudFront).
