Enhancement: integrate Supabase authentication by adding AuthProvider and related login/signup pages to App component; update .env.example and env.d.ts for Supabase configuration; include membership status fetching from WordPress in the WordPress integration.

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,16 @@ VITE_WP_GRAPHQL_URL=https://your-wordpress-site.com/graphql
 # Example: VITE_MEDIA_CDN_URL=https://leckerbisschen.s3.eu-central-1.amazonaws.com
 # VITE_MEDIA_CDN_URL=
 
+# Supabase (public) client configuration. These map to your Supabase project's URL
+# and anon public key. They are safe to expose in the client but MUST NOT be
+# service role keys.
+# VITE_SUPABASE_URL=https://your-project-id.supabase.co
+# VITE_SUPABASE_ANON_KEY=your_public_anon_key
+
+# Optional: Supabase service role key. Only for local scripts (e.g. migrate-wp-users-to-supabase.js).
+# Never commit this or use it in frontend code.
+# SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
+
 # Substack newsletter publication URL (optional)
 # VITE_SUBSTACK_PUBLICATION=https://yoursubstack.substack.com
 
