Enhancement: integrate MemberLogin functionality into the application by adding MemberLoginOffcanvasProvider and updating the Footer and EventPage components to handle member login interactions; refactor MemberLoginPage to utilize a dedicated MemberLoginForm component for improved user experience.

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ VITE_WP_GRAPHQL_URL=https://your-wordpress-site.com/graphql
 
 # Supabase (public) client configuration. These map to your Supabase project's URL
 # and anon public key. They are safe to expose in the client but MUST NOT be
-# service role keys.
+# service role keys. For Vercel: add the same names in Project → Settings → Environment Variables.
 # VITE_SUPABASE_URL=https://your-project-id.supabase.co
 # VITE_SUPABASE_ANON_KEY=your_public_anon_key
 
