Enhancement: update MemberLoginForm to support in-place signup option; improve user experience with login tooltip positioning in StickyTop; add guidance for local Supabase configuration in .env.example; refactor SignUpPage to utilize MemberSignupForm for streamlined account creation process.

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,8 @@ VITE_WP_GRAPHQL_URL=https://your-wordpress-site.com/graphql
 # Supabase (public) client configuration. These map to your Supabase project's URL
 # and anon public key. They are safe to expose in the client but MUST NOT be
 # service role keys. For Vercel: add the same names in Project → Settings → Environment Variables.
+# For local login to work: in Supabase Dashboard → Authentication → URL Configuration,
+# add http://localhost:3000 and http://localhost:5173 to "Redirect URLs" (otherwise auth redirects to Site URL).
 # VITE_SUPABASE_URL=https://your-project-id.supabase.co
 # VITE_SUPABASE_ANON_KEY=your_public_anon_key
 
