Enhancement: add Stripe integration for checkout functionality, including environment variable setup in .env.example and README; implement CheckoutButton component in ProductPage for seamless payment processing; update routing in App component to handle checkout success and cancellation pages; improve geolocation API error handling in geolocation.ts; refine layout and styles in various components for better user experience.

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,11 @@ VITE_WP_GRAPHQL_URL=https://your-wordpress-site.com/graphql
 
 # Formspree contact form ID (optional – for /contact and Contact modal)
 # VITE_FORMSPREE_CONTACT_FORM_ID=your_formspree_form_id
+
+# Stripe configuration (required for checkout)
+# STRIPE_SECRET_KEY: Your Stripe secret key (starts with sk_). NEVER expose this in client code.
+# Add this in Vercel: Project → Settings → Environment Variables (server-side only).
+# STRIPE_SECRET_KEY=sk_test_... (for testing) or sk_live_... (for production)
+
+# Optional: Site URL for checkout redirects (defaults to VERCEL_URL or localhost:3000)
+# NEXT_PUBLIC_SITE_URL=https://www.yoursite.com
