--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:vercel": "vercel dev",
     "build": "vite build && node scripts/optimize-images.js",
     "preview": "vite preview"
   },
   "dependencies": {
     "@google/genai": "latest",
+    "@stripe/stripe-js": "^8.7.0",
     "@supabase/supabase-js": "^2.94.1",
     "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
@@ -18,6 +20,7 @@
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.11.0",
     "split-type": "^0.3.4",
+    "stripe": "^20.3.1",
     "yet-another-react-lightbox": "^3.28.0"
   },
   "devDependencies": {
@@ -29,6 +32,6 @@
     "sharp": "^0.34.5",
     "tailwindcss": "^3.4.19",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "vite": "^5.4.21"
   }
 }
