--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^19.2.13",
+    "@types/react-dom": "^19.2.3",
     "@vercel/node": "^5.5.30",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.24",
