Enhance membership management features: add MembersSettingsPage for account security options, integrate Discord linking and unlinking functionality in AuthContext, and update MembersAreaPage to include a link to settings. Update .env.example with new Stripe and Resend configurations, and add Resend package to dependencies.

--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,11 @@ VITE_WP_GRAPHQL_URL=https://your-wordpress-site.com/graphql
 
 # Optional: Site URL for checkout redirects (defaults to VERCEL_URL or localhost:3000)
 # NEXT_PUBLIC_SITE_URL=https://www.yoursite.com
+
+# Stripe webhook (required for auto-granting membership on Club purchase)
+# From Stripe Dashboard → Webhooks → Add endpoint → checkout.session.completed → signing secret.
+# STRIPE_WEBHOOK_SECRET=whsec_...
+
+# Resend (for welcome email when someone becomes a member)
+# RESEND_API_KEY=re_...
+# Optional: RESEND_FROM_EMAIL=Kandie Gang <members@yourdomain.com> (default: onboarding@resend.dev for testing)
