--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-router-dom": "^7.11.0",
     "split-type": "^0.3.4",
     "stripe": "^20.3.1",
-    "yet-another-react-lightbox": "^3.28.0"
+    "yet-another-react-lightbox": "^3.28.0",
+    "resend": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
