Update vercel.json configuration: add build, output, and dev commands for improved deployment setup; refine rewrites to exclude specific asset paths from routing.

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "devCommand": "vite preview --port $PORT",
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+    { "source": "/((?!assets|fonts|images|logos|robots.txt|_redirects).*)", "destination": "/index.html" }
   ]
 }
