fix: update dev:vercel script to include build step for improved local development

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:vercel": "vercel dev",
+    "dev:vercel": "npm run build && vercel dev -A vercel.dev.json",
     "build": "vite build && node scripts/optimize-images.js",
     "preview": "vite preview"
   },
