feat: enhance KandieEventPage with markdown support and new components
- Added `react-markdown`, `remark-gfm`, `rehype-raw`, and `rehype-sanitize` for improved markdown rendering.
- Normalized event description formatting for better markdown list support.
- Introduced `EventHeader` and `EventSidebarCard` components for better event presentation.
- Created `GuideSection` component to display ride guides with images.
- Updated `KandieEventPage` to utilize new components and improved layout.
- Refactored event data types to accommodate new guide structure.
- Updated dependencies in package.json for compatibility and enhancements.

--- a/package.json
+++ b/package.json
@@ -20,23 +20,27 @@
     "posthog-js": "^1.342.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.11.0",
+    "remark-gfm": "^4.0.1",
+    "rehype-raw": "^6.1.1",
+    "rehype-sanitize": "^5.0.1",
+    "resend": "^4.0.0",
     "split-type": "^0.3.4",
     "stripe": "^20.3.1",
-    "yet-another-react-lightbox": "^3.28.0",
-    "resend": "^4.0.0"
+    "yet-another-react-lightbox": "^3.28.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
-    "@vercel/node": "^5.5.30",
+    "@vercel/node": "^5.6.2",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.24",
     "postcss": "^8.5.6",
     "sharp": "^0.34.5",
     "tailwindcss": "^3.4.19",
     "typescript": "~5.8.2",
-    "vite": "^5.4.21"
+    "vite": "^7.3.1"
   }
 }
