--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-dom": "^19.2.3",
     "@vercel/node": "^5.6.2",
     "@vitejs/plugin-react": "^5.0.0",
+    "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.24",
     "postcss": "^8.5.6",
     "sharp": "^0.34.5",
