--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.11.0",
-    "remark-gfm": "^4.0.1",
     "rehype-raw": "^6.1.1",
     "rehype-sanitize": "^5.0.1",
+    "remark-gfm": "^4.0.1",
     "resend": "^4.0.0",
     "split-type": "^0.3.4",
     "stripe": "^20.3.1",
@@ -35,24 +35,25 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.14.0",
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
     "@vercel/node": "^5.6.2",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.24",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.1.0",
-    "@tailwindcss/typography": "^0.5.16",
-    "autoprefixer": "^10.4.24",
     "postcss": "^8.5.6",
     "prettier": "^3.4.2",
     "sharp": "^0.34.5",
     "tailwindcss": "^3.4.19",
-    "typescript-eslint": "^8.26.0",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.2",
+    "typescript-eslint": "^8.26.0",
     "vite": "^7.3.1"
   }
 }
