--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
+    "next": "^16.1.6",
     "posthog-js": "^1.342.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
