--- a/package.json
+++ b/package.json
@@ -45,13 +45,14 @@
     "@types/node": "^22.14.0",
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
-    "@vercel/node": "^5.6.2",
+    "@vercel/node": "^4.0.0",
     "@vitejs/plugin-react": "^5.0.0",
     "autoprefixer": "^10.4.24",
-    "eslint": "^9.18.0",
+    "eslint": "^10.0.1",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^1.14.0",
     "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "postcss": "^8.5.6",
     "prettier": "^3.4.2",
